--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  color: palevioletred;
+  padding: 4rem;
+}
